# pyigmap

./: .cliffignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATIONS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  NOTICE.md  README.md  RELEASE.md  cliff.toml  justfile  main.nf  mypy.ini  nextflow.config  nextflow_schema.json  pyigmap  pyproject.toml  ruff.toml
.claude/commands/: commit-push-pr.md  commit-push.md  format-code.md  review-pr.md  run-tests.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docker-multiarch.yml  e2e.yml
conf/: base.config  modules.config
modules/: calib_dedup.nf  cdr3nt_error_corrector.nf  downloader.nf  fastp.nf  igblast.nf  pyumi.nf  vidjil.nf
modules/local/: calib_dedup.nf  cdr3nt_error_corrector.nf  downloader.nf  fastp.nf  igblast.nf  pyumi.nf  reporter.nf  vidjil.nf
results/: allergy_umi_test.ipynb
sandbox/: ERR7425614_pyumi.json  allergy_umi_test.ipynb  cdr3correct-v_c-rnaseq.ipynb
steps/calib-dedup/: Dockerfile  README.md  barcode.py  requirements.txt  run.py
steps/calib_dedup/: Dockerfile  README.md  barcode.py  barcode_extractor.py  barcode_pattern.py  calib-dedup.nf  calib_dedup.nf  logger.py  requirements.in  requirements.txt  run.py  utils.py
steps/calib_dedup/barcode/: extract.py  pattern.py
steps/calib_dedup/unit_tests/: test_barcode_extract.py  test_barcode_pattern.py
steps/cdr3nt-error-corrector/: Dockerfile  README.md  build_ref.sh  correct.py  filter.py  pgen.py  requirements.in  requirements.txt  run.py  utils.py
steps/cdr3nt-error-corrector/unit-tests/: test_filters.py
steps/cdr3nt_error_corrector/: Dockerfile  README.md  airr.py  cdr3nt-error-corrector.nf  cdr3nt_error_corrector.nf  correct.py  filter.py  pgen.py  pytest.ini  requirements.txt  run.py
steps/downloader/: Dockerfile  downloader.nf
steps/fastp/: Dockerfile  README.md  fastp.nf  mock_merge.py  requirements.in  requirements.txt  run.py
steps/fastp/unit_tests/: conftest.py  (+1 more)
steps/igblast/: Dockerfile  README.md  build_ref.py  build_ref.sh  igblast.nf  run.py
steps/pyumi/: Dockerfile  README.md  extract.py  pattern.py  pyumi.nf  requirements.in  requirements.txt  run.py  utils.py
steps/vidjil/: Dockerfile  README.md  run.py  utils.py  vidjil.nf
subworkflows/: download_fastq.nf  pyigmap_amplicon.nf  pyigmap_rnaseq.nf
tests/: test_main.yml
tests/cdr3nt_error_corrector/: in_calib.json  in_fastp.json  stat.amplicon.expected.json  stat.bulk.expected.json  test_cdr3nt_error_corrector.yml
tests/fastp/: test_fastp.yml
tests/fixtures/: README.md
tests/igblast/: test_igblast.yml
tests/vidjil/: test_vidjil.yml
workflows/: download_fastq.nf  pyigmap-amplicon.nf  pyigmap-rnaseq.nf  pyigmap_amplicon.nf  pyigmap_rnaseq.nf  vdj_mapping.nf
(+10 files in other folders)
