[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyigmap"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "jupyterlab>=4.3.4",
    "nextflow>=24.4.2",
    "numpy==1.26.4",
    "olga==1.2.4",
    "pandas==2.1.4",
    "pyfastx==2.1.0",
    "pytest-workflow>=2.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "regex==2024.5.15",
    "six==1.16.0",
    "tzdata==2023.4",
]

[dependency-groups]
dev = [
    "pyrefly==0.47.0",
    "ruff==0.14.10",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "nf-core>=2.14.1",
    # Reporter dependencies (needed for type checking)
    "panel==1.6.2",
    "plotly==6.0.1",
    "bokeh==3.7.2",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "logomaker==0.8.7",
    # fq-downloader dependencies (needed for type checking)
    "ffq==0.3.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["pyigmap"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyigmap",
    "/tests",
    "/bin",
    "/subworkflows",
    "/modules",
]

[tool.ruff]
exclude = [".git", "__pycache__", "*.md", ".venv", "build", "dist", ".nextflow", "work"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "I",   # isort
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C90", # mccabe complexity
    "Q",   # flake8-quotes
    "COM", # flake8-commas
    "PIE", # flake8-pie
    "RUF", # ruff-specific rules
]
ignore = ["COM812"]  # Trailing comma conflicts with formatter

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.isort]
known-first-party = ["pyigmap"]

[tool.ruff.lint.per-file-ignores]
# Allow complexity in helper functions and ignore long lines in test data
"**/build_ref.py" = ["C901"]
"**/unit_tests/**/*.py" = ["E501"]
"**/src/*/run.py" = ["C901"]
